# SlicerBreastUltrasoundAnalysis

./: .gitignore  CMakeLists.txt  LICENSE.bib  README.md
BUS_Diagnosis/: BUS_Diagnosis.py  CMakeLists.txt
BUS_Diagnosis/Resources/: net_weight.pth
BUS_Diagnosis/Resources/UI/: BUS_Diagnosis.ui
SampleData/BenignSample6/: 000000.dcm  000001.dcm  000002.dcm  000003.dcm  000004.dcm  000005.dcm  000006.dcm  000007.dcm  000008.dcm  000009.dcm  000010.dcm  000011.dcm  000012.dcm  000013.dcm  000014.dcm  000015.dcm  000016.dcm  000017.dcm  000018.dcm  000019.dcm  000020.dcm  000021.dcm  000022.dcm  000023.dcm  000024.dcm  000025.dcm  000026.dcm  000027.dcm  000028.dcm  000029.dcm  000030.dcm  000031.dcm  000032.dcm  000033.dcm  000034.dcm  000035.dcm  000036.dcm  000037.dcm  000038.dcm  000039.dcm  (+83 more)
